--- a/home.html
+++ b/home.html
@@ -14,14 +14,14 @@
   <div class="d-flex">
     <aside class="sidebar vh-100 border-end pt-3 bg-white d-flex flex-column">
       <!-- 1. 後台名稱 -->
-      <div class="px-4">
+      <h1 class="px-4 fs-4">
         <strong>Cinnroll</strong>
         <small>- 後台管理</small>
-      </div>
+      </h1>
       <!-- 2. 選單 -->
-      <div class="overflow-auto mt-3">
+      <ul class="overflow-auto mt-3 list-unstyled">
         <div>
-          <a href="/home.html" class="sidebar-link">
+          <a href="./home.html" class="sidebar-link">
             <div class="px-4">
               <i class="bi bi-house pe-2"></i>
               首頁
@@ -32,31 +32,31 @@
 
         <div>
           <a href="#menu-order" class="sidebar-link" data-bs-toggle="collapse">
-            <div class="d-flex justify-content-between px-4">
-              <p class="mb-0">
+            <ul class="d-flex justify-content-between px-4 list-unstyled">
+              <li class="mb-0">
                 <i class="bi bi-card-list pe-2"></i>
                 訂單管理
-              </p>
+              </li>
               <i class="bi bi-caret-down"></i>
-            </div>
+            </ul>
           </a>
-          <div class="collapse" id="menu-order">
-            <a href="/orders.html" class="sidebar-link">
-            <div class="ps-5">
+          <ul class="collapse" id="menu-order">
+            <a href="./orders.html" class="sidebar-link">
+            <li class="ps-5 list-unstyled">
               訂單列表
-            </div>
+            </li>
           </a>
-           <a href="/order.html" class="sidebar-link">
-            <div class="ps-5">
+           <a href="./order.html" class="sidebar-link">
+            <li class="ps-5 list-unstyled">
               單一訂單細節
-            </div>
+            </li>
           </a>
-          </div>
+        </ul>
 
 
         </div>
 
-      </div>
+      </ul>
       <!-- 3. 登出按鈕 -->
       <a href="#" class="mt-auto sidebar-link">
         <div class="px-4">
@@ -180,102 +180,11 @@
           </div>
         </div>
       </div>
-      <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-      <script>
-        (() => {
-          const chartColors = {
-            red: 'rgb(255, 99, 132)',
-            orange: 'rgb(255, 159, 64)',
-            yellow: 'rgb(255, 205, 86)',
-            green: 'rgb(75, 192, 192)',
-            blue: 'rgb(54, 162, 235)',
-            purple: 'rgb(153, 102, 255)',
-            grey: 'rgb(201, 203, 207)'
-          };
-          var randomScalingFactor = function () {
-            return Math.round(Math.random() * 2000000);
-          };
-
-          const pieCtx = document.getElementById('pie-chart').getContext('2d');
-          const barCtx = document.getElementById('bar-chart').getContext('2d');
-
-          const config = {
-            type: 'pie',
-            data: {
-              datasets: [{
-                data: [
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                ],
-                backgroundColor: [
-                  chartColors.red,
-                  chartColors.orange,
-                  chartColors.yellow,
-                  chartColors.green,
-                  chartColors.blue,
-                ],
-                label: 'Dataset 1'
-              }],
-              labels: [
-                '大麥克全餐',
-                '肥宅快樂水',
-                '太爽啦義大利麵',
-                '薯條加大吃不完',
-                '兒童餐椅不給坐',
-              ]
-            },
-            options: {
-              responsive: true
-            }
-          };
-          const barConfig = {
-            type: 'bar',
-            data: {
-              datasets: [{
-                data: [
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                  randomScalingFactor(),
-                ],
-                backgroundColor: [
-                  chartColors.red,
-                  chartColors.orange,
-                  chartColors.yellow,
-                  chartColors.green,
-                  chartColors.blue,
-                  chartColors.purple,
-                ],
-                label: 'Dataset 1'
-              }],
-              labels: [
-                '一月',
-                '二月',
-                '三月',
-                '四月',
-                '五月',
-                '六月',
-              ]
-            },
-            options: {
-              responsive: true
-            }
-          };
-          const pieChart = new Chart(pieCtx, config);
-          const barChart = new Chart(barCtx, barConfig);
-        })();
-      </script>
     </main>
   </div>
-
-
-<script src="./javascripts/all.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="./javascripts/mychart.js"></script>
+  <script src="./javascripts/all.js"></script>
 </body>
 </html>
