--- a/layout.html
+++ b/layout.html
@@ -5,54 +5,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./stylesheets/all.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
+    <link rel="stylesheet" href="./stylesheets/all.css" />   
   </head>
   <body>
     <div class="d-flex">
       <aside class="sidebar vh-100 border-end pt-3 bg-white d-flex flex-column">
-        <!-- 1. 後台名稱 -->
-        <div class="px-4">
+          <!-- 1. 後台名稱 -->
+        <h1 class="px-4 fs-4">
           <strong>Cinnroll</strong>
           <small>- 後台管理</small>
-        </div>
+        </h1>
         <!-- 2. 選單 -->
-        <div class="overflow-auto mt-3">
+        <ul class="overflow-auto mt-3 list-unstyled">
           <div>
-            <a href="/home.html" class="sidebar-link">
+            <a href="./home.html" class="sidebar-link">
               <div class="px-4">
                 <i class="bi bi-house pe-2"></i>
                 首頁
               </div>
+              
             </a>
           </div>
+
           <div>
-            <a
-              href="#menu-order"
-              class="sidebar-link"
-              data-bs-toggle="collapse"
-            >
-              <div class="d-flex justify-content-between px-4">
-                <p class="mb-0">
+            <a href="#menu-order" class="sidebar-link" data-bs-toggle="collapse">
+              <ul class="d-flex justify-content-between px-4 list-unstyled">
+                <li class="mb-0">
                   <i class="bi bi-card-list pe-2"></i>
                   訂單管理
-                </p>
+                </li>
                 <i class="bi bi-caret-down"></i>
-              </div>
+              </ul>
             </a>
-            <div class="collapse" id="menu-order">
-              <a href="/orders.html" class="sidebar-link">
-                <div class="ps-5">訂單列表</div>
-              </a>
-              <a href="/order.html" class="sidebar-link">
-                <div class="ps-5">單一訂單細節</div>
-              </a>
-            </div>
+            <ul class="collapse" id="menu-order">
+              <a href="./orders.html" class="sidebar-link">
+              <li class="ps-5 list-unstyled">
+                訂單列表
+              </li>
+            </a>
+            <a href="./order.html" class="sidebar-link">
+              <li class="ps-5 list-unstyled">
+                單一訂單細節
+              </li>
+            </a>
+          </ul>
+
+
           </div>
-        </div>
+
+        </ul>
         <!-- 3. 登出按鈕 -->
         <a href="#" class="mt-auto sidebar-link">
           <div class="px-4">
@@ -63,11 +68,7 @@
       </aside>
       <main class="main">
         <div class="bg-white w-100 border-bottom sticky-top">
-          <a
-            href="#"
-            class="d-inline-block py-3 px-4 border-end"
-            id="toggle-btn"
-          >
+          <a href="#" class="d-inline-block py-3 px-4 border-end" id="toggle-btn">
             <i class="bi bi-arrows-angle-expand"></i>
           </a>
         </div>
@@ -77,11 +78,12 @@
       </main>
     </div>
 
-    <script src="./javascripts/all.js"></script>
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script src="./javascripts/all.js"></script>
   </body>
 </html>
