--- a/order.html
+++ b/order.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./stylesheets/all.css" />
     <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
+    <link rel="stylesheet" href="./stylesheets/all.css" />
   </head>
   <body
     data-bs-spy="scroll"
@@ -19,10 +19,10 @@
     <div class="d-flex">
       <aside class="sidebar vh-100 border-end pt-3 bg-white d-flex flex-column">
         <!-- 1. 後台名稱 -->
-        <div class="px-4">
-          <strong>Cinnroll</strong>
-          <small>- 後台管理</small>
-        </div>
+        <h1 class="px-4 fs-4">
+        <strong>Cinnroll</strong>
+        <small>- 後台管理</small>
+        </h1>
         <!-- 2. 選單 -->
         <div class="overflow-auto mt-3">
           <div>
@@ -80,7 +80,7 @@
         <div class="p-4">
           <!-- 主要内容 -->
           <div class="row">
-            <div class="col-lg-3 mb-3">
+            <div class="col-lg-3 mb-3 fs-6">
               <nav
                 id="detail-list-item"
                 class="list-group sticky-top"
@@ -115,7 +115,7 @@
             </div>
             <div class="col-lg-9">
               <div class="card mb-3">
-                <div class="card-header" id="card-summary">摘要</div>
+                <h2 class="card-header fs-6" id="card-summary">摘要</h2>
                 <div class="card-body">
                   <dl class="row mb-0">
                     <dt class="col-sm-3 text-truncate">訂單編號</dt>
@@ -131,7 +131,7 @@
               </div>
 
               <div class="card mb-3">
-                <div class="card-header" id="card-detail">購買品項</div>
+                <h2 class="card-header fs-6" id="card-detail">購買品項</h2>
                 <div class="card-body p-0">
                   <table
                     class="table table-hover mb-0 text-nowrap align-middle w-100"
@@ -257,7 +257,7 @@
               </div>
 
               <div class="card mb-3">
-                <div class="card-header" id="card-invoice">發票管理</div>
+                <h2 class="card-header fs-6" id="card-invoice">發票管理</h2>
                 <div class="card-body">
                   <div class="row mb-3">
                     <label for="invoiceType" class="col-sm-2 col-form-label"
@@ -309,7 +309,7 @@
               </div>
 
               <div class="card mb-3">
-                <div class="card-header" id="card-danger">危險操作</div>
+                <h2 class="card-header fs-5" id="card-danger">危險操作</h2>
                 <div class="card-body">
                   <div class="row align-items-center mb-3">
                     <div class="col-2">
@@ -320,7 +320,7 @@
                         退款
                       </button>
                     </div>
-                    <div class="col">退還用戶款項</div>
+                    <p class="col pt-3">退還用戶款項</p>
                   </div>
 
                   <div class="row align-items-center mb-3">
@@ -332,7 +332,7 @@
                         折讓
                       </button>
                     </div>
-                    <div class="col">針對已開立的訂單退回部分款項</div>
+                    <p class="col pt-3">針對已開立的訂單退回部分款項</p>
                   </div>
 
                   <div class="row align-items-center mb-3">
@@ -344,7 +344,7 @@
                         刪除訂單
                       </button>
                     </div>
-                    <div class="col">將訂單刪除，並移除相關訂單資訊</div>
+                    <p class="col pt-3">將訂單刪除，並移除相關訂單資訊</p>
                   </div>
                 </div>
               </div>
@@ -354,11 +354,11 @@
       </main>
     </div>
 
-    <script src="./javascripts/all.js"></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"
     ></script>
+    <script src="./javascripts/all.js"></script>
   </body>
 </html>
